infrastructure/auth/keycloak.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:24.0
        args: ["start-dev"]
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: auth
spec:
  type: NodePort
  selector:
    app: keycloak
  ports:
  - port: 80
    targetPort: 8080
