infrastructure/auth/keycloak-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: auth
spec:
  parentRefs:
    - name: fitforge-gateway
      namespace: fitforge-dev
  hostnames:
    - "3-109-48-66.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: keycloak
          port: 80
